# iced-tui

./: Cargo.toml
examples/: interaction.rs  text.rs
notes/: benchmarks.txt
src/: application.rs  constants.rs  lib.rs  sandbox.rs
src/renderer/: button.rs  colors.rs  column.rs  container.rs  mod.rs  primitives.rs  progress_bar.rs  row.rs  scrollable.rs  space.rs  style.rs  text.rs  text_input.rs  tui_renderer.rs  utils.rs  virtual_buffer.rs
