[package]
name = "iced_tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_core = "0.4"
iced_native = "0.4"
iced_futures = "0.3"
tui = "0.16"
termion = "1.5"
futures = "0.3"

[[example]]
name = "text"
path = "examples/text.rs"
