[package]
name = "iced_tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_core = "0.4"
iced_native = {version="0.4", path="../iced_native-0.4.0"}
iced_futures = {version="0.3", features=["tokio"]}
crossterm = "0.22"
log = "0.4"
rand = "0.8"

[dev-dependencies]
# used in examples
simplelog = "0.11"

[[example]]
name = "text"
path = "examples/text.rs"
